--- a/liff.html
+++ b/liff.html
@@ -20,13 +20,13 @@
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 
   <script>
-    // ⭐️ ใส่ URL ของ Web App ที่ได้จาก Google Apps Script
+    // URL ของ Web App ที่ได้จาก Google Apps Script
     const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx8OOQdUmeHTnaSn8O6I_pFjX4d__fA0zQGcb9_6ZuGjJ0p8AYuq2Ec3r0jQk69feoS/exec';
 
     async function main() {
       try {
         // 1. เริ่มต้น LIFF
-        await liff.init({ liffId: '2007794785-M6zwOQBp' }); // ⭐️ ใส่ LIFF ID ของคุณ
+        await liff.init({ liffId: '2007794785-M6zwOQBp' });
 
         if (!liff.isLoggedIn()) {
           document.getElementById('status-text').innerText = 'กรุณาเข้าสู่ระบบ';
@@ -71,14 +71,23 @@
               throw new Error(result.message);
             }
 
-            // 6. แสดงผลลัพธ์และปิด LIFF
-            document.getElementById('status-text').innerText = 'บันทึกข้อมูลสำเร็จ!';
+            // 6. แสดงผลลัพธ์ตาม Action และปิด LIFF
+            // ----- ✨ ส่วนที่แก้ไข ✨ -----
+            if (action === 'checkin') {
+                document.getElementById('status-text').innerText = '✅ Check-In สำเร็จ!';
+            } else if (action === 'checkout') {
+                document.getElementById('status-text').innerText = '🌙 Check-Out สำเร็จ!';
+            } else {
+                document.getElementById('status-text').innerText = 'บันทึกข้อมูลสำเร็จ!';
+            }
+            // -----------------------------
+
             document.getElementById('status-text').classList.remove('processing');
             document.getElementById('status-text').classList.add('success');
 
             setTimeout(() => {
               liff.closeWindow();
-            }, 1500); // หน่วงเวลา 1.5 วินาทีเพื่อให้ผู้ใช้เห็นข้อความ
+            }, 2000); // หน่วงเวลา 2 วินาทีเพื่อให้ผู้ใช้เห็นข้อความ
           },
           (error) => {
             // กรณีผู้ใช้ไม่ยินยอมหรือเกิดข้อผิดพลาดในการขอตำแหน่ง
